Remove trailing cell

--- a/lectures/1_introduction_to_asymptotic_analysis.ipynb
+++ b/lectures/1_introduction_to_asymptotic_analysis.ipynb
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So how fast does our sorting function grow? Inspecting the graphs above shows that the growth is closest in shape to $O(N)$ and $O(Nlog(N))$. But we don't really need to plot graphs to know this, as sorting algorithms are a very well studied problem - the best comparison sort functions have a growth rate of $O(Nlog(N))$, and in fact this is a proven lower bound for comparison sorts. \n",
+    "So how fast does our sorting function grow? Inspecting the graphs above shows that the growth is closest in shape to $O(N)$ and $O(Nlog(N))$. But we don't really need to plot graphs to know this, as sorting algorithms are a very well studied problem - the best comparison sort functions have a growth rate of $O(Nlog(N))$, and in fact this is a proven lower bound for comparison sorts (i.e. it is not possible for a sorting algorithm to work faster than this if it sorts by comparing items). \n",
     "\n",
     "Ok, so now we have introduced $O$ notation and looked at some of the standard functions. That's probably enough for one day."
    ]
@@ -348,13 +348,6 @@
    "source": [
     "## Coming up in part 2: we look at some standard Python algorithms and data structures, and discuss their $O$ behaviour and how to accidentally blow up on large datasets..."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
